--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ language: objective-c
 xcode_project: Demo/SmileViewControllerDemo.xcodeproj
 xcode_scheme: SmileViewControllerDemo
 xcode_sdk: iphonesimulator10.0
+osx_image: xcode8
