--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
 language: objective-c
 xcode_project: Demo/SmileViewControllerDemo.xcodeproj
-xcode_scheme: SmileViewControllerDemo
-xcode_sdk: iphonesimulator9.3
-osx_image: xcode8
+xcode_scheme: Demo/SmileViewControllerDemo
