--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 xcode_project: Demo/SmileViewControllerDemo.xcodeproj
-xcode_scheme: Demo/SmileViewControllerDemo
+xcode_scheme: SmileViewControllerDemo
