--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: objective-c
 xcode_project: Demo/SmileViewControllerDemo.xcodeproj
 xcode_scheme: SmileViewControllerDemo
+script: 
+CODE_SIGNING_REQUIRED = NO
