--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ script:
   -scheme SmileViewControllerDemo
   build
   test
-  CODE_SIGN_IDENTITY = ""
-  CODE_SIGNING_REQUIRED = NO
+  CODE_SIGN_IDENTITY=""
+  CODE_SIGNING_REQUIRED=NO
