Add code coverage directive to travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ script:
   test
   CODE_SIGN_IDENTITY=""
   CODE_SIGNING_REQUIRED=NO
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
