--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
+osx_image: xcode8.2
 
 # xcode_project: Demo/SmileViewControllerDemo.xcodeproj
 # xcode_scheme: SmileViewControllerDemo
