--- a/Demo/SmileViewControllerDemo.xcodeproj/xcshareddata/xcschemes/SmileViewCtrlr.xcscheme
+++ b/Demo/SmileViewControllerDemo.xcodeproj/xcshareddata/xcschemes/SmileViewCtrlr.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6DFCB60C1FCD951A004414A1"
-               BuildableName = "SmileViewController.framework"
-               BlueprintName = "SmileViewController"
+               BlueprintIdentifier = "6DC318E61FCDADF9002BE01D"
+               BuildableName = "SmileViewCtrlr.framework"
+               BlueprintName = "SmileViewCtrlr"
                ReferencedContainer = "container:SmileViewControllerDemo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -47,9 +47,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6DFCB60C1FCD951A004414A1"
-            BuildableName = "SmileViewController.framework"
-            BlueprintName = "SmileViewController"
+            BlueprintIdentifier = "6DC318E61FCDADF9002BE01D"
+            BuildableName = "SmileViewCtrlr.framework"
+            BlueprintName = "SmileViewCtrlr"
             ReferencedContainer = "container:SmileViewControllerDemo.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -65,9 +65,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6DFCB60C1FCD951A004414A1"
-            BuildableName = "SmileViewController.framework"
-            BlueprintName = "SmileViewController"
+            BlueprintIdentifier = "6DC318E61FCDADF9002BE01D"
+            BuildableName = "SmileViewCtrlr.framework"
+            BlueprintName = "SmileViewCtrlr"
             ReferencedContainer = "container:SmileViewControllerDemo.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
